<resources>
    <string name="app_name">KelasKita</string>
    <string name="loading">Loading</string>
    <string name="refresh">Refresh 🔃</string>

    <string name="app_intro">Males buka e-learning buat nyari tugas? atau pengen dapet notifikasi
        Kalo Ada Tugas Baru? Aplikasi Ini Bisa Bantu Kamu Kok</string>
    <string name="what_is_this_app"><u>Ini aplikasi apa ya?</u></string>

    <string name="password">Kata Sandi</string>
    <string name="email">Email</string>
    <string name="login_tag_line">Hanya dengan login, semuanya beres</string>
    <string name="login">Login</string>

    <string name="string_no_class"><u>Kelasku engga ada?</u></string>
    <string name="error_while_getting_data">Terjadi error ketika mengambil tugas, coba periksa kembali jaringanmu</string>
    <string name="no_assignment_text">Saat ini kamu tidak memiliki tugas, saatnya explore hal baru</string>
    <string name="no_announcement">Engga ada pemberitahuan apa apa nih, sepi bat sepi dah</string>
    <string name="already_have_account">Sudah punya akun? Login</string>
    <string name="no_account">Belum punya akun? Daftar Baru</string>
    <string name="register">Daftar</string>
    <string name="register_tag_line">Daftar Akun</string>
    <string name="network_error">Terjadi Kesalahan Jaringan</string>
    <string name="btn_announcement_detail">Buka Link 🌐</string>
    <string name="btn_assignment_detail">Buka Di Browser 🌐</string>
    <string name="btn_announcement_create">Post Pemberitahuan 🚀</string>
    <string name="btn_assignment_create">Post Tugas 😢</string>
    <string name="dialog_no_class">Jadi kelasmu belum terdaftar ya? coba chat developer aplikasi ini karena ada beberapa informasi yang dibutuhkan sebelum menambahkan kelas</string>
    <string name="btn_dialog_no_class">Chat 👋</string>
    <string name="view_network_error_title">Terjadi error saat menghubungkan ke server</string>
    <string name="view_network_error_desc">Coba deh periksa jaringan kamu, udah konek belum?</string>
    <string name="view_no_access_title">Daerah Terlarang 🚨️</string>
    <string name="view_no_access_desc">Kamu engga boleh akses punya kelas lain ya</string>
    <string name="view_not_found_title">Tugas yang kamu cari tidak ditemukan</string>
    <string name="view_not_found_desc">Coba periksa lagi link yang kamu buka deh, mungkin ada yang salah</string>
    <string name="btn_network_error_text">Coba Lagi</string>
    <string name="btn_announcement_edit">Post Edit 🚀</string>
    <string name="btn_create_class">Tambahkan Kelas 🏛</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_forgot_password"><u>Lupa password?</u></string>
</resources>