<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:elevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/cvNetworkErrorRetry"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/img_no_connection"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNetworkErrorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/view_network_error_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:theme="@style/BoldText" />

        <TextView
            android:id="@+id/tvNetworkErrorDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/view_network_error_desc"
            android:textAlignment="center"
            android:textSize="16sp"
            android:theme="@style/NormalText" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNetworkErrorRetry"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:elevation="6dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_progress_bar"
            android:gravity="center"
            android:text="@string/btn_network_error_text"
            android:textSize="18sp"
            android:theme="@style/NormalText" />

        <LinearLayout
            android:id="@+id/llNetworkErrorRetryProgress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_progress_bar"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:theme="@style/ProgressBarStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/loading"
                android:textSize="16sp"
                android:theme="@style/BoldText" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>